# hse_caos_practice

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md
01-intro/: README.md
01sem-asm/: 64_plus_32.S  README.md  read_example.S
02-asm/: README.md  arithmetic.S  infinite_read.S  read_write.S  simple_read_write.S
02-syscalls-files/: 01-syscall-buffer.cpp  02-simple-read-write.cpp  03-files.cpp  04-dup.cpp
02sem-asm/: README.md  print_fib.cpp  simple_print.S  simple_print.c  sum_numbers.S
03-memory/: variable.S
03-mmap/: check_mem.cpp  kill_proc.cpp  mmap_anon.cpp  mmap_anon_example.cpp  mmap_example.cpp  write_struct.cpp
03-stack/: README.md  multiply_add.c  multiply_add.cpp  multiply_add_reversed.S  stack_read_add.S  variable.S
03sem-asm/: Makefile  lea.S  lea_operations.S  syscall.S
04-cdecl/: README.md  call_ret.S  call_ret_naive.S  call_ret_stack.S  endian.S  read_and_add.S
04-more-asm/: README.md  count_digits.S  lea_operations.S  printf_scanf.S  simpleio_i686.S  stack_calc.S  structs.S  structs.cpp
04-proc/: fork_bomb_yield.c  fork_buf.cpp  fork_var_change.cpp  process.cpp  simple_fork.cpp  simple_wait.cpp  waitpid.cpp
05-asm-func/: my_scan.S
05-calling-conventions-2/: README.md
05-exec/: 1_pipe.cpp  2_pipe_fork.cpp  3_exec.cpp  4_mybash.cpp  5_run_program.cpp  check_fds.cpp  secret_file.txt
05sem-c/: README.md  alignment.c  scanf_example.c
06-asm-intro/: README.md  conditions.S  read_write.S  shifts.S
06-c-basics/: README.md  buf_speed.c  null_dereferencing.cpp  overflow.cpp  printf_example.c  progress.c  reverse_words.c  scanf_example.c  strings.c  test_overflow.c
06sem-c/: README.md  buf.c
07-asm-cdecl/: array.S  call_ret_stack.S  stack.S  variable.S
07-c-dynamic-mem/: README.md  malloc_new_obj.c  malloc_simple_ops.c  malloc_zero.c
07-c-memory/: README.md  tree.c
07sem-c/: README.md  test_overflow.c
08-callconv/: call_ret_stack.S  empty_main.S  main.S  main.cpp  multiply_add.S  multiply_add.c  my_hypot.S  my_hypot.cpp
08-utf-8/: print_utf_8.c
09-float/: nan_example.c
09-floats/: README.md
09-kr/: defines.cpp  tty.c
09sem-asm/: README.md  (+2 more)
24-cmake/2/: CMakeLists.txt
24-cmake/2/.cache/clangd/index/: color.cpp.51BBB4845AFCBFD3.idx  color.h.E7186735A209B1C0.idx  fib.h.34FA9BD002BFA925.idx  julia.cpp.2C0D48FA75D89A97.idx  julia.h.001904C66D0C94EF.idx  main.cpp.EE51358408B3F5EA.idx
24-cmake/3/: CMakeLists.txt
24-cmake/3/.cache/clangd/index/: color.cpp.D25CDD033C8801E9.idx  color.h.54A2076F0DCF2C04.idx  fib.h.E8868EAEA50709AF.idx  julia.cpp.FF9828422375C262.idx  julia.h.5F437E96CE12B4B1.idx  main.cpp.542939D124B0B956.idx  test_fib.cpp.281A840CF819A4ED.idx
24-cmake/3/src/: color.cpp
24-cmake/3/tests/: test_fib.cpp
24-cmake/4/: CMakeLists.txt
24-cmake/4/.cache/clangd/index/: color.cpp.D784EF993CBEE470.idx  color.h.81EA21D2B6463BD1.idx  fib.h.71691252498B0F3E.idx  julia.cpp.9ADD63A047D0F5CE.idx  julia.h.EE25DF8511DD98E9.idx  main.cpp.9B23563AE0DC88C6.idx  test_fib.cpp.E9A795074EA69029.idx
24-cmake/4/tests/: test_fib.cpp
(+828 files in other folders)
